libecl с питоном и релизный

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,9 +80,9 @@ message( STATUS "libecl version: ${ECL_VERSION_MAJOR}.${ECL_VERSION_MINOR}.${ECL
 #-----------------------------------------------------------------
 
 option( BUILD_TESTS         "Should the tests be built"                               OFF)
-option( BUILD_APPLICATIONS  "Should we build small utility applications"              OFF)
-option( BUILD_ECL_SUMMARY   "Build the commandline application ecl_summary"           OFF)
-option( ENABLE_PYTHON       "Build and install the Python wrappers"                   OFF)
+option( BUILD_APPLICATIONS  "Should we build small utility applications"              ON)
+option( BUILD_ECL_SUMMARY   "Build the commandline application ecl_summary"           ON)
+option( ENABLE_PYTHON       "Build and install the Python wrappers"                   ON)
 option( BUILD_SHARED_LIBS   "Build shared libraries"                                  ON )
 option( ERT_USE_OPENMP      "Use OpenMP"                                              OFF )
 option( RST_DOC             "Build RST documentation"                                 OFF)
